Add package metadata and create GitHub Actions workflow for publishing to NuGet

--- a/ItemFactory.Core/ItemFactory.Core.csproj
+++ b/ItemFactory.Core/ItemFactory.Core.csproj
@@ -4,6 +4,12 @@
         <TargetFrameworks>net8.0; netstandard2.1</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        
+        <Author>Christos Maragkos</Author>
+        <PackageId>ItemFactory</PackageId>
+        <Description>ItemFactory is a library for 
+            creating and managing items in a game or application.</Description>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
 </Project>
