--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Restore
-        run: dotnet restore $env:PROJECT_PATH
+        run: dotnet restore ${{ env.PROJECT_PATH }}
 
       - name: Pack
         shell: pwsh
